feat(appkit): activate public window chrome (#339)